# OpenMVG_DBoW3

./: CMakeLists.txt
src/: CMakeLists.txt
src/software/: CMakeLists.txt  main_DetectImagePairs.cpp  main_TrainVocabulary.cpp
src/util/: data_conversion.hpp
